--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="title-container">
             <h1 class="title">think like a philospher</h1>
-            <small class="title-desc">a philosphers' quote generator</small>
+            <small class="title-desc">a philospher's quote generator</small>
         </div>
         <hr class="divider">
         <div class="picker-container">
@@ -42,7 +42,7 @@
                 </div>                
             </div>
             <button class="getQuote" id="getQuote">GET QUOTE!</button>
-            <div class="quote" id="quote">the quote!</div>
+            <div class="quote" id="quote"></div>
         </div>
     </body>
     <script src="main.js"></script>
